--- a/trunk/AVR Projects/ZigBeeController/default/Makefile
+++ b/trunk/AVR Projects/ZigBeeController/default/Makefile
@@ -15,7 +15,7 @@ COMMON = -mmcu=$(MCU)
 
 ## Compile options common for all C compilation units.
 CFLAGS = $(COMMON)
-CFLAGS += -Wall -gdwarf-2 -std=gnu99   -Os -funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums
+CFLAGS += -Wall -gdwarf-2 -std=gnu99     -DF_CPU=8000000UL -Os -funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums
 CFLAGS += -MD -MP -MT $(*F).o -MF dep/$(@F).d 
 
 ## Assembly specific flags
@@ -37,7 +37,7 @@ HEX_EEPROM_FLAGS += --change-section-lma .eeprom=0 --no-change-warnings
 
 
 ## Include Directories
-INCLUDES = -I"C:\Users\Public\Documents\Taller de Control - Tesis\AVR Projects\ZigBeeController\includes" 
+INCLUDES = -I"C:\Users\Manuel Vieda\Documents\Smart Grids\AVR Projects\ZigBeeController\includes" 
 
 ## Objects that must be built in order to link
 OBJECTS = ZigBeeController.o ZigBee.o USART.o 
